Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/questionnaire.css
+++ b/mcidashboard/mcidashboard-front/src/css/questionnaire.css
@@ -1,9 +1,12 @@
 .chatbox {
+  margin-top: 20px;
   position: fixed;
   bottom: 80px; 
   left: 10px;
-  width: 350px;
-  height: 500px;
+  width: 18%;
+  min-width: 250px;
+  height: 50%;
+  min-height: 200px;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 10px;
