--- a/mcidashboard/mcidashboard-front/src/css/sidebar.css
+++ b/mcidashboard/mcidashboard-front/src/css/sidebar.css
@@ -49,9 +49,8 @@
     -ms-overflow-style: none;
     /* Hide scrollbar for IE and Edge */
     padding-top: 20px;
-    z-index: 0;
+    z-index: 10;
     zoom: 0.67;
-    overflow-y: hidden;
 }
 
 .sidebar::-webkit-scrollbar {
